--- a/product-manager.html
+++ b/product-manager.html
@@ -188,11 +188,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GuardantHealth/743999692275462-software-product-manager-redwood-city-ca'>Guardant Health Software Product Manager, Redwood City, CA | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GuardantHealth/743999692275462-software-product-manager-redwood-city-ca'>Guardant Health Software Product Manager, Redwood City, CA | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=oqUdafwr&__jvst=Employee&__jvsd=sjOYzhwq&__jvsc=Twitter&bid=nujVVLwT'>New Relic Careers - Senior Product Manager, Java Ecosystem</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=oqUdafwr&__jvst=Employee&__jvsd=sjOYzhwq&__jvsc=Twitter&bid=nujVVLwT'>New Relic Careers - Senior Product Manager, Java Ecosystem</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -399,7 +399,7 @@ this?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/graphisoft/jobs/4367320002'>Job Application for Product Designer Manager at Graphisoft</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/graphisoft/jobs/4367320002'>Job Application for Product Designer Manager at Graphisoft</a></h5> 
 <p><span class="badge badge-light">Budapest, Hungary</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -428,7 +428,7 @@ designers and engineers, and operations to lead the vision, strategy, and?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/endless/e429bff6-21de-4b1d-87de-8d0065f40625'>Endless - Product Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/endless/e429bff6-21de-4b1d-87de-8d0065f40625'>Endless - Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -437,7 +437,7 @@ designers and engineers, and operations to lead the vision, strategy, and?...</p
 <p>6 days ago ... You will have experience working as a Product Owner for a technology company 
 delivering SaaS solutions, or you might be working in a Business Analyst or?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tradesy/d74145bd-494c-4626-bcea-149963c2dfdc'>Tradesy - Product Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/tradesy/d74145bd-494c-4626-bcea-149963c2dfdc'>Tradesy - Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -461,7 +461,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
